--- a/MemoryMosaic/Shared/LibraryContentViewer/Thumbnail.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/Thumbnail.razor
@@ -2,7 +2,7 @@
 	@if (Item.starred) { <MaterialIcon Icon="star" Class="star-icon"/> }
 	@if (Item.video) { <MaterialIcon Icon="play_circle_outline" Class="video-icon"/> }
 	<Checkbox Input="@Parent.SelectedItems.Contains(Item.uuid)" OnChange="@CheckClicked"/>
-	<img src="data:image/jpg;base64,@Item.thumbnail" alt="@Item.path"/>
+	<img src="data:image/jpg;base64,@Item.thumbnail" alt="@Item.path" @onclick="@ThumbnailClicked"/>
 </div>
 
 @code {
@@ -34,5 +34,10 @@
 	{
 		Selected = !Selected;
 	}
+
+	private void ThumbnailClicked()
+	{
+		if (Parent.SelectedItems.Count > 0)
+			Selected = !Selected;
 	}
 }
