Ctrl Clicking a thumbnail's img selects it even if no items selected

--- a/MemoryMosaic/Shared/LibraryContentViewer/Thumbnail.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/Thumbnail.razor
@@ -33,9 +33,9 @@
 		Selected = !Selected;
 	}
 
-	private void ThumbnailClicked()
+	private void ThumbnailClicked(MouseEventArgs eventArgs)
 	{
-		if (Parent.SelectedItems.Count > 0)
+		if (Parent.SelectedItems.Count > 0 || eventArgs.CtrlKey)
 			Selected = !Selected;
 	}
 }
