Rename C.PermDeleteItem → C.RemoveFromTrash

--- a/MemoryMosaic/Pages/LibraryContent/Trash.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Trash.razor
@@ -175,7 +175,7 @@
 @*             { *@
 @*                 await JSRuntime.InvokeAsync<string>("removeCheck", item); *@
 @*                 lcv.MediaList.RemoveAll(u => u.uuid == item); *@
-@*                 C.PermDeleteItem(item); *@
+@*                 C.RemoveFromTrash(item); *@
 @*                 await InvokeAsync(StateHasChanged); *@
 @*             } *@
 @*         } *@
