Delete button in Trash now empties trash if no selection. Fix bugs and improve LCV <header>.

--- a/MemoryMosaic/Pages/Test.razor
+++ b/MemoryMosaic/Pages/Test.razor
@@ -4,3 +4,4 @@
 <title>Test - MM</title>
 
 <LibraryContentViewer DefaultViewMode="ViewMode.Day"/>
+@* <LibraryContentViewer DefaultViewMode="ViewMode.Day" TrashPage="true"/> *@
