--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -9,15 +9,32 @@ Items can be selected, and depending on the page, different options may be appli
 
 <KeyboardShortcuts Esc="@ClearChecks" CtrlShiftMinus="@(() => ViewMode++)" CtrlShiftPlus="@(() => ViewMode--)"/>
 
-<header style="visibility: @(SelectedItems.Count > 0 ? "visible" : "hidden")">
-	<IconButton Icon="close" OnClick="@ClearChecks"/>
-	<span>@SelectedItems.Count&nbsp;&nbsp;Selected</span>
-	
+<header>
+	@if (SelectedItems.Count > 0)
+	{
+		<IconButton Icon="close" OnClick="@ClearChecks"/>
+		<span>@SelectedItems.Count&nbsp;&nbsp;Selected</span>
+	}
+
 	<div id="buttons">
-		<IconButton Icon="file_download" OnClick="@DownloadButtonClick" Title="Download Selected"/>
-		<IconButton Icon="collections" Title="Toggle CollectionSelector"/>
-		<IconButton Icon="star_outline" OnClick="@starPrompt.Enable" Title="Add or Remove Stars From Selected"/>
-		<IconButton Icon="trash" OnClick="@DeleteButtonClick" Title="Delete Selected"/>
+		@if (SelectedItems.Count > 0)
+		{
+			<IconButton Icon="file_download" OnClick="@DownloadButtonClick" Title="Download Selected"/>
+			<IconButton Icon="collections" Title="Toggle CollectionSelector"/>
+			<IconButton Icon="star_outline" OnClick="@(() => starPrompt.Enable())" Title="Add or Remove Stars From Selected"/>
+		}
+
+		@if (TrashPage)
+		{
+			<div>
+				<IconButton Icon="restore" OnClick="@DeleteButtonClick" Title="@(SelectedItems.Count == 0 ? "Restore ALL" : "Restore Selected")"/>
+				<IconButton Icon="trash" OnClick="@DeleteButtonClick" Title="@(SelectedItems.Count == 0 ? "Delete ALL" : "Delete Selected")"/>
+			</div>
+		}
+		else
+		{
+			<IconButton Icon="trash" OnClick="@DeleteButtonClick" Title="Delete Selected"/>
+		}
 	</div>
 </header>
 
@@ -75,7 +92,7 @@ Items can be selected, and depending on the page, different options may be appli
 <div id="bottom-load-div"></div>
 
 <TwoChoiceInput @ref="@starPrompt" YesBtnIcon="star" YesBtnText="Add" NoBtnIcon="star_outline" NoBtnText="Remove" YesBtnClick="@(() => UpdateStars(true))" NoBtnClick="@(() => UpdateStars(false))" Message="@(SelectedItems.Count > 1 ? "Add or remove stars for selected items?" : "Add or remove star for selected item?")"/>
-<TwoChoiceInput @ref="@deletePrompt" YesBtnClick="@DeleteSelected" NoBtnClick="@deletePrompt.Disable" Message="@DeletePromptMessage"/>
+<TwoChoiceInput @ref="@deletePrompt" YesBtnClick="@DeleteSelected" NoBtnClick="@(() => deletePrompt.Disable())" Message="@DeletePromptMessage"/>
 
 <ProgressPopUp @ref="@downloadPopUp" Message="Preparing Zip..."/>
 
@@ -93,7 +110,7 @@ Items can be selected, and depending on the page, different options may be appli
 	public HashSet<Guid> SelectedItems { get; private set; } = null!;
 	private int lastCheckedIndex;
 
-	private TwoChoiceInput starPrompt = new(), deletePrompt = new();
+	private TwoChoiceInput starPrompt = null!, deletePrompt = null!;
 
 	private string DeletePromptMessage
 	{
@@ -105,7 +122,7 @@ Items can be selected, and depending on the page, different options may be appli
 			{
 				if (SelectedItems.Count == 1)
 					message = "PERMANENTLY delete selected item?";
-				else if (SelectedItems.Count < Content.Count)
+				else if (SelectedItems.Count > 0 && SelectedItems.Count < Content.Count)
 					message = "PERMANENTLY delete selected items?";
 				else
 					message = "PERMANENTLY delete ALL items?";
@@ -114,7 +131,7 @@ Items can be selected, and depending on the page, different options may be appli
 			{
 				if (SelectedItems.Count == 1)
 	                message = "Move selected item to Trash?";
-				else if (SelectedItems.Count < Content.Count)
+				else if (SelectedItems.Count > 0 && SelectedItems.Count < Content.Count)
 	                message = "Move selected items to Trash?";
 				else
 	                message = "Move ALL items to Trash?";
@@ -227,13 +244,20 @@ Items can be selected, and depending on the page, different options may be appli
 	private void DeleteSelected()
 	{
 		if (TrashPage)
-			C.RemoveFromTrash(SelectedItems);
+		{
+			if (SelectedItems.Count == 0)
+				C.EmptyTrash();
+			else
+				C.RemoveFromTrash(SelectedItems);
+		}
 		else
+		{
 			C.MoveToTrash(SelectedItems);
+		}
 		
 		Content.RemoveAll(item => SelectedItems.Contains(item.uuid));
-		deletePrompt.Disable();
 		SelectedItems.Clear();
+		deletePrompt.Disable();
 		StateHasChanged();
 	}
 
@@ -267,7 +291,7 @@ Items can be selected, and depending on the page, different options may be appli
 		downloadPopUp.Disable();
 		await InvokeAsync(StateHasChanged);
 
-		Directory.Delete(zipFolderPath, true);//Not needed after it's zipped.
+		Directory.Delete(zipFolderPath, true); //Not needed after it's zipped.
 
 		navigationManager.NavigateTo($"mm_tmp/{zipFilename}", true);
 	}
